# InterpretableChessEngine

./: .gitignore  Cargo.toml  PROJECT_SPEC.md  README.md
.cursor/plans/: phase1_fancy_magic_bitboard.md
.github/workflows/: ci.yml
benches/: search_bench.rs
src/: lib.rs
src/core/: board.rs  board_geometry.rs  color.rs  coord.rs  delta.rs  gamestate.rs  mod.rs  moves.rs  piece.rs  square.rs
src/eval/: mod.rs
src/graph/: mod.rs
src/movegen/: attacks.rs  bitboard.rs  legal_moves.rs  magic_constants.rs  masks.rs  mod.rs  rays.rs
src/search/: mod.rs
src/threats/: mod.rs
src/uci/: mod.rs
src/variants/: mod.rs
