[package]
name = "interpretable-chess-engine"
version = "0.1.0"
edition = "2021"
authors = ["Gingnose"]
repository = "https://github.com/Gingnose/InterpretableChessEngine"
license = "MIT"
description = "An interpretable chess engine using graph theory"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[profile.bench]
debug = true  # flamegraph用

[[bench]]
name = "search_bench"
harness = false
